--- a/MVC_pattern/MvcCar/appsettings.json
+++ b/MVC_pattern/MvcCar/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcCarContext": "Server=(localdb)\\mssqllocaldb;Database=MvcCarContext-e0bfbb67-4b32-45a7-92d9-f7d0c4b765b3;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
